# quarto-course-publishing

./: .gitignore  INSTRUCTIONS.md  LICENSE.md  PREREQUISITES.md  PROJECT_SPEC.md  QUICK_START_GUIDE.md  README.md  RUNNING_THE_SYSTEM.md  USER_GUIDE.md  pyproject.toml  requirements.txt  ~$README.docx
config/: binomial_distribution_demo.yml  binomial_distribution_import_demo.yml  course-template-7x5-core-v5.yml  course.yml  demo-interactions.yml  outbreak_ve_demo.yml
config/bck/: course-template-7x5-core-v1.yml  course-template-7x5-core-v2.yml  course-template-7x5-core-v3.yml  course-template-7x5-core-v4.yml  epm101.yml  epm102.yml  test-aliases.yml  test-interactions-p1.yml  test-interactions-p2.yml  test-interactions.yml  test-page-kinds.yml  variant-verification.yml
course/binomial_distribution/: index.qmd
course/binomial_distribution_authored/: index.qmd
course/binomial_distribution_v2/: index.qmd
course/binomial_distribution_v3/: _quarto.yml
course/binomial_distribution_v4/: _quarto.yml  index.qmd
course/mod001/: index.qmd
course/outbreak_ve_demo/: _quarto.yml  index.qmd
docs/: _quarto.yml
docs/_archive/: interactions_old.md
docs/author_pack/: quarto_authoring_pack.md
docs/interactions/: quiz.qmd  reveal.qmd  tabs.qmd
docs/system/: running_the_system.md
docs/workflows/: academic_workflow.md  word_authoring_guide.md
src/course_generator/: cli.py
templates/: styles.css.j2
templates/interactions/: accordion_explanation.qmd.j2  annotated_figure.qmd.j2  callout_emphasis.qmd.j2  (+20 more)
tests/: test_generator.py
tools/: build.ps1  build.sh
(+498 files in other folders)
